--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,12 +8,13 @@
     <h1><%= title %></h1>
 
     <h1>User Login</h1>
-    <form action="/login" method="post">
+    <form action="/home" method="post">
       <label for="email">Email:</label>
       <input type="email" id="email" name="email" required><br><br>
       <label for="password">Password:</label>
       <input type="password" id="password" name="password" required><br><br>
       <input type="submit" value="Login">
     </form>
+  <a href="/reg">Register</a>
   </body>
 </html>
