--- a/views/reg.ejs
+++ b/views/reg.ejs
@@ -9,7 +9,15 @@
     <link rel="stylesheet" href="/public/">
 </head>
 <body>
-<form method="post" action="">
+<form method="post" action="/home">
+    <label for="upor">Uporabnikško ime:</label>
+    <input type="text" id="upor" name="upor" required><br><br>
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" required><br><br>
+    <label for="password">Password:</label>
+    <input type="password" id="password" name="password" required><br><br>
+    <input type="submit" value="Register">
 </form>
+<a href="/">Back to login!</a>
 </body>
 </html>
