--- a/views/reg.ejs
+++ b/views/reg.ejs
@@ -49,7 +49,7 @@
                     Register
                 </div>
                 <div class="card-body">
-                    <form action="/register" method="POST">
+                    <form action="/add" method="POST">
                         <div class="mb-3">
                             <label for="email" class="form-label">Email address</label>
                             <input type="email" class="form-control" id="email" name="email" required>
