--- a/views/home.ejs
+++ b/views/home.ejs
@@ -84,7 +84,7 @@
                 <p>Join the fun learning experience!</p>
                 <a href="/quiz_play" class="btn btn-kahoot btn-lg">Start Playing</a> <br>
                 <a href="/create-quiz" class="btn btn-kahoot btn-lg">Create Quiz</a><br>
-                <a href="/profile/id_u" class="btn btn-kahoot btn-lg">View Profile</a> <br>
+                <a href="/profile" class="btn btn-kahoot btn-lg">View Profile</a> <br>
                 <a href="/logout" class="btn btn-kahoot btn-lg">Odjava</a> <br>
             </div>
         </div>
