--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -6,7 +6,22 @@
     <title>Profile</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-
+        body {
+            background: linear-gradient(to right, #99ccff, #99ffcc);
+        }
+        .container{
+            animation: slideInAnimation 1s ease-in-out forwards;
+        }
+        @keyframes slideInAnimation {
+            from {
+                opacity: 0;
+                transform: translateY(-50px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
     </style>
 </head>
 <body>
@@ -17,12 +32,12 @@
             User Information
         </div>
         <div class="card-body">
-            <p><strong>Email:</strong> <%= user.email %></p>
-            <p><strong>Username:</strong> <%= user.username %></p>
+            <p><strong>Email:</strong> <%= email %></p>
+            <p><strong>Username:</strong> <%= username %></p>
         </div>
     </div>
 
-    <!-- Update Information Form -->
+
     <div class="card mb-4">
         <div class="card-header">
             Update Information
@@ -31,18 +46,18 @@
             <form method="POST" action="/profile/update">
                 <div class="mb-3">
                     <label for="email" class="form-label">Email:</label>
-                    <input type="email" class="form-control" id="email" name="email" value="<%= user.email %>" required>
+                    <input type="email" class="form-control" id="email" name="email" value="<%= email %>" required>
                 </div>
                 <div class="mb-3">
                     <label for="username" class="form-label">Username:</label>
-                    <input type="text" class="form-control" id="username" name="username" value="<%= user.username %>" required>
+                    <input type="text" class="form-control" id="username" name="username" value="<%= username %>" required>
                 </div>
                 <button type="submit" class="btn btn-primary">Update</button>
             </form>
         </div>
     </div>
 
-    <!-- Delete Account Form -->
+
     <div class="card">
         <div class="card-header">
             Delete Account
@@ -53,6 +68,7 @@
             </form>
         </div>
     </div>
+    <a href="/home" class="btn btn-kahoot btn-lg">Return to Homepage</a>
 </div>
 </body>
 </html>
