--- a/views/home.ejs
+++ b/views/home.ejs
@@ -85,7 +85,7 @@
                 <a href="/quiz_play" class="btn btn-kahoot btn-lg">Start Playing</a> <br>
                 <a href="/create-quiz" class="btn btn-kahoot btn-lg">Create Quiz</a><br>
                 <a href="/profile" class="btn btn-kahoot btn-lg">View Profile</a> <br>
-                <a href="/logout" class="btn btn-kahoot btn-lg">Odjava</a> <br>
+                <a href="/logout" class="btn btn-kahoot btn-lg">Logout</a> <br>
             </div>
         </div>
     </div>
