--- a/views/quiz_play.ejs
+++ b/views/quiz_play.ejs
@@ -122,7 +122,7 @@
                 <% quizzes.forEach(quiz => { %>
                     <li>
                         <h2><%= quiz.title %></h2>
-                        <a href="/play/<%= quiz._id %>">Play Quiz</a>
+                        <a href="/join_game">Play Quiz</a>
                     </li>
                 <% }); %>
             </ul>
