--- a/views/create_quiz.ejs
+++ b/views/create_quiz.ejs
@@ -94,6 +94,10 @@
     </style>
 </head>
 <body>
+<audio id="backgroundMusic" loop autoplay volume="0.4">
+    <source src="../public/images/lobby-classic-game.mp3" type="audio/mp3">
+
+</audio>
 <img src="../public/images/Kahoot_Logo.png" class="kahoot-logo">
 <div class="container">
     <h1 class="title">Create Quiz</h1>
