--- a/views/home.ejs
+++ b/views/home.ejs
@@ -72,7 +72,10 @@
     </style>
 </head>
 <body>
+<audio id="backgroundMusic" loop autoplay volume="0.4">
+    <source src="../public/images/lobby-classic-game.mp3" type="audio/mp3">
 
+</audio>
 <div class="container">
 
     <div class="row">
