--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,6 +56,10 @@
 
 </head>
 <body>
+<audio id="backgroundMusic" loop autoplay volume="0.4">
+  <source src="../public/images/lobby-classic-game.mp3" type="audio/mp3">
+
+</audio>
 <div class="header">
   <img src="../public/images/Kahoot_Logo.png" class="kahoot-logo">
   <p>Welcome to the ultimate quiz experience!</p>
