--- a/views/quiz_interface.ejs
+++ b/views/quiz_interface.ejs
@@ -39,8 +39,13 @@
     </style>
 </head>
 <body>
+<audio id="backgroundMusic" loop autoplay volume="0.4">
+    <source src="../public/images/lobby-classic-game.mp3" type="audio/mp3">
 
-<div id="quizQuestions"></div>
+</audio>
+<div id="quizQuestions">
+
+</div>
 <form id="quizForm">
     <button type="submit">Submit Answer</button>
 </form>
