--- a/views/quiz_results.ejs
+++ b/views/quiz_results.ejs
@@ -6,6 +6,10 @@
     <title>Quiz Results</title>
 </head>
 <body>
+<audio id="backgroundMusic" loop autoplay volume="0.4">
+    <source src="../public/images/lobby-classic-game.mp3" type="audio/mp3">
+
+</audio>
 <h1>Results</h1>
 <div id="quizResults"></div>
 <a href="/home">Back to Homepage</a>
