--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -25,6 +25,10 @@
     </style>
 </head>
 <body>
+<audio id="backgroundMusic" loop autoplay volume="0.4">
+    <source src="../public/images/lobby-classic-game.mp3" type="audio/mp3">
+
+</audio>
 <div class="container mt-5">
     <h1 class="mb-4">Welcome to Your Profile</h1>
     <div class="card mb-4">
