--- a/views/quiz_play.ejs
+++ b/views/quiz_play.ejs
@@ -101,6 +101,10 @@
     </style>
 </head>
 <body>
+<audio id="backgroundMusic" loop autoplay volume="0.4">
+    <source src="../public/images/lobby-classic-game.mp3" type="audio/mp3">
+
+</audio>
 <img src="../public/images/Kahoot_Logo.png" class="kahoot-logo">
 <header>
     <h1>Quiz List</h1>
