--- a/views/quiz_play.ejs
+++ b/views/quiz_play.ejs
@@ -122,14 +122,18 @@
         <% if (quizzes.length === 0) { %>
             <p>No quizzes available.</p>
         <% } else { %>
-            <ul class="quiz-list">
-                <% quizzes.forEach(quiz => { %>
-                    <li>
-                        <h2><%= quiz.title %></h2>
-                        <a href="/start-quiz?roomCode=<%= roomCode %>">Play Quiz</a>
-                    </li>
-                <% }); %>
-            </ul>
+                <ul class="quiz-list">
+                    <% quizzes.forEach(quiz => { %>
+                        <li>
+                            <h2><%= quiz.title %></h2>
+                            <form action="/play-quiz" method="POST">
+                                <input type="hidden" name="quizId" value="<%= quiz._id %>">
+                                <input type="text" name="roomCode" placeholder="Enter Room Code" required>
+                                <button type="submit">Join Game</button>
+                            </form>
+                        </li>
+                    <% }); %>
+                </ul>
         <% } %>
     </div>
 </main>
