--- a/views/quiz_play.ejs
+++ b/views/quiz_play.ejs
@@ -118,6 +118,10 @@
                 transform: translateX(calc(100% - 100px));
             }
         }
+        .slika{
+            width: 20px;
+            height: 20px;
+        }
     </style>
 </head>
 <body>
@@ -129,9 +133,9 @@
     <h1>Quiz List</h1>
     <nav>
         <ul>
-            <li><a href="/home">Home</a></li>
-            <li><a href="/create-quiz">Create Quiz</a></li>
-            <li><a href="/logout">Logout</a></li>
+            <li><img src="../public/images/home-icon-silhouette.svg" alt="slika" class="slika"><a href="/home">Home</a></li>
+            <li><img src="../public/images/free-play-1779827-1513991.webp" alt="slika2" class="slika"><a href="/create-quiz">Create Quiz</a></li>
+            <li><img src="../public/images/Logout.svg.png" alt="slika3" class="slika"><a href="/logout">Logout</a></li>
         </ul>
     </nav>
 </header>
