--- a/views/home.ejs
+++ b/views/home.ejs
@@ -68,6 +68,11 @@
                 transform: translateX(calc(100% - 100px));
             }
         }
+        .slika
+        {
+            height: 30px;
+            width: 30px;
+        }
     </style>
 </head>
 <body>
@@ -81,10 +86,10 @@
             <div class="jumbotron">
                 <h1>Welcome to Kahoot</h1>
                 <p>Join the fun learning experience!</p>
-                <a href="/quiz_play" class="btn btn-kahoot btn-lg">Start Playing</a> <br>
-                <a href="/create-quiz" class="btn btn-kahoot btn-lg">Create Quiz</a><br>
-                <a href="/profile" class="btn btn-kahoot btn-lg">View Profile</a> <br>
-                <a href="/logout" class="btn btn-kahoot btn-lg">Logout</a> <br>
+               <a href="/quiz_play" class="btn btn-kahoot btn-lg"> <img src="../public/images/free-play-1779827-1513991.webp" alt="slika" class="slika">Start Playing</a> <br>
+                <a href="/create-quiz" class="btn btn-kahoot btn-lg"><img src="../public/images/create-outline.svg" alt="slika2" class="slika">Create Quiz</a><br>
+                <a href="/profile" class="btn btn-kahoot btn-lg"><img src="../public/images/profile-user.svg" alt="slika3" class="slika">View Profile</a> <br>
+                <a href="/logout" class="btn btn-kahoot btn-lg"><img src="../public/images/Logout.svg.png" alt="slika4" class="slika">Logout</a> <br>
             </div>
         </div>
     </div>
