--- a/views/waiting_lobby.ejs
+++ b/views/waiting_lobby.ejs
@@ -40,7 +40,7 @@
 <body>
 <div class="container">
     <h1>Waiting Lobby</h1>
-    <p>Waiting for other players to join...</p>
+    <button><a href="/room/<%= roomId %>/quiz">Start playing </a></button>
 <a href="/lobby">Leave Game</a>
 </div>
 </body>
